Thu Feb 21 15:43:46 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: corrected a few typos.

Thu Feb 21 14:55:39 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated.

	* src/data.c: removed duplicate libintl.h includes.
	* src/init.c: likewise.
	* src/modules.c: likewise.
	* src/modules_api.c: likewise.
	* src/net.c: likewise.
	* src/prefs.c: likewise.

	* src/init.c: added a few missing gettext calls.
	* src/log.c: added gettext calls to translatable strings.

	* po/POTFILES.in: added src/log.c.

	* po/ca.po, po/es.po: Updated translations.
	* po/de.po, po/fr.po, po/sv.po: update-po.

Mon Feb 18 12:16:41 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added 2 new patches from Vashti, one adds a reconnect feature.
	and the other fix for aliases.

	* ROADMAP: Moved around.

Wed Feb 13 07:25:14 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS, ROADMAP: Fixed nested alias.

	* src/log.c: Changed the includes a bit.

	* src/net.c (heck_aliases): Rewritten, now returns void
	(action_send_to_connection): Now uses a GString internally.

Tue Feb 12 07:51:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added patch from Vashti which fixes blackbold bug.

	* AUTHORS: Added more information on Vashti
	* ROADMAP: Added new idea

	* src/gnome-mud.h (system_data): BoldForeGround added.
	* src/init.c (window_menu_help_about): Removed some contributers,
	although they still exist in AUTHORS.
	* src/prefs.c (load_prefs): Added BoldForeground.
	(prefs_color_frame): Likewise.
	* src/telnet.c (pre_process): Bug fix, overriting memory which
	would destroy buf and cd variable.
	* src/window.c (con_escm): Changed by Vashti (see patch above)

Mon Feb 11 14:50:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Forgot src/log.c.

Mon Feb 11 08:50:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added new patch from Vashti
	lets you turn session recording (logging in real time) on and off
    from the file menu.
