@@ -57,9 +57,6 @@ static gint parms[10], nparms;
 static gint nowcol = 0 ;
 bool        BOLD   = FALSE;
 
-static gint idx_colour[2][8] = { { 0, 1, 3,  4,  5,  6,  7,  8 },
-                                 { 8, 9, 10, 11, 12, 13, 14, 15 } } ;
-
 static void cons_escm (CONNECTION_DATA *cd)
 {
     int i, p;
@@ -128,10 +125,10 @@ static void cons_escm (CONNECTION_DATA *cd)
 
 	if ( nowcol >= 30 && nowcol <= 37 )
 	{
-		int j ;
+		gint j;
 
-		j = idx_colour[BOLD ? 1 : 0][nowcol - 30] ;
-        cd->foreground = &prefs.Colors[j] ;
+		j = nowcol - ( BOLD ? 22 : 30 ) ;
+	        cd->foreground = &prefs.Colors[j] ;
 	}
 	else if ( BOLD && !nowcol )
 	{
