@@ -1,3 +1,9 @@
+Fri Feb 22 08:28:12 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
+
+	* po/sv.po: Updated translations.
+
+	* src/window.c: Applied patch from Vashti.
+
 Thu Feb 21 15:43:46 CET 2002  Jordi Mallach  <jordi@sindominio.net>
 
 	* po/ca.po: corrected a few typos.
